# put_stress_rus

./: .gitignore  MANIFEST.in  README.md  README.rst  pyproject.toml
nn_training/: 02_put_stress_on_word.ipynb  checkpoint_put_stress.hdf5  put_stress_on_word.ipynb
put_stress_rus/: model_put_stress.h5  put_stress.py
put_stress_rus/Model_put_stress/: keras_metadata.pb  saved_model.pb
put_stress_rus/Model_put_stress/variables/: variables.data-00000-of-00001  variables.index
put_stress_rus/utils/: word_processing.py
tests/: test_put_stress.py  test_word_processing.py
